--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,10 +3,10 @@
         "browser": true,
         "es6": true
     },
-    "parser": "babel-eslint",
     "extends": "eslint:recommended",
     "parserOptions": {
-        "ecmaVersion": 2015
+        "ecmaVersion": 2015,
+        "sourceType": "module"
     },
     "rules": {
         "indent": [
@@ -15,7 +15,7 @@
         ],
         "linebreak-style": [
             "error",
-            "unix"
+            "windows"
         ],
         "quotes": [
             "error",
