--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
     "description": "",
     "main": "index.html",
     "scripts": {
-        "init-project": "npm install && npm install babel-eslint --save-dev && npm-run-all init:*",
+        "init-project": "npm install && npm-run-all init:*",
         "init:dirs": "mkdirp dist src/sass src/css src/vendor src/images src/js",
         "init:files": "touch README.md src/index.html src/sass/style.scss src/js/script.js",
         "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
         "init:gitignore:custom": "echo \"dist\" >> .gitignore",
         "test": "npm-run-all test:*",
         "test:html": "globstar nu-html-checker dist/*.html",
-        "test:js": "eslint src/js/",
+        "test:js": "eslint --fix src/js/",
         "test:scss": "stylelint src/sass/",
         "build": "npm-run-all build:* test",
         "build:clean": "mkdirp dist && rm -r dist && mkdirp dist",
@@ -34,7 +34,6 @@
     },
     "devDependencies": {
         "autoprefixer-cli": "^1.0.0",
-        "babel-eslint": "^10.0.3",
         "browser-sync": "^2.26.3",
         "copyfiles": "^2.1.0",
         "eslint": "^5.14.1",
