Add date input, no hour selection yet

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "flatpickr": "^4.6.2",
         "json": "^9.0.6"
     },
     "devDependencies": {
