--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "index.html",
     "scripts": {
+      "start": "node server.js",
       "init-project": "npm install && npm-run-all init:*",
       "init:dirs": "mkdirp dist src/sass src/css src/vendor src/images src/js",
       "init:files": "touch README.md src/index.html src/sass/style.scss src/js/script.js",
@@ -12,7 +13,7 @@
       "test": "npm-run-all test:*",
       "test:html": "globstar nu-html-checker dist/*.html",
       "test:js": "eslint --fix src/js/",
-      "test:scss": "stylelint src/sass/",
+      "test:scss": "stylelint --fix src/sass/",
       "build": "npm-run-all build:* test",
       "build:clean": "mkdirp dist && rm -r dist && mkdirp dist",
       "build:copy": "copyfiles -a -u 1 -e \"**/sass/**/*\" -e \"**/.gitkeep\" \"src/**/*\" dist",
